--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.android.material:material:1.2.0-alpha02' // handle error
+
     implementation 'com.facebook.react:react-native:+'
     implementation "com.android.support:recyclerview-v7:28.0.0"
 }
